--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.1",
   "description": "WEB记事本",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 0",
-    "build": "grunt build"
+    "test": "echo \"Error: no test specified\" && exit 0"
   },
   "repository": {
     "type": "git",
